# umbra-xmr-bridge

./: .gitignore  README.md  docker-compose.yml  index.html  miniapp.Dockerfile  nginx.conf  package-lock.json  package.json  start-umbra.sh  stop-umbra.sh  tsconfig.json  vite.config.js
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  redis.rs
backend/src/blockchain/: bitcoin.rs  evm.rs  mod.rs  monero.rs  solana.rs  ton.rs
backend/src/middleware/: mod.rs  rate_limit.rs  security.rs  telegram_auth.rs
backend/src/models/: audit.rs  mod.rs  mpc.rs  order.rs  rate.rs  user.rs
backend/src/mpc/: coordinator.rs  frost_bridge.rs  key_ceremony.rs  mod.rs  signer.rs
backend/src/routes/: admin.rs  health.rs  mod.rs  orders.rs  rates.rs  ws.rs
backend/src/services/: audit_service.rs  mod.rs  order_service.rs  pubsub.rs  rate_service.rs
backend/src/tasks/: confirmation_checker.rs  deposit_monitor.rs  expiry.rs  mod.rs  withdrawal_processor.rs
backend/src/utils/: crypto.rs  validation.rs
bot/: Dockerfile  requirements.txt
bot/bot/: config.py  main.py
bot/bot/handlers/: admin.py  bridge.py  help.py  history.py  rates.py  settings.py  start.py  status.py
bot/bot/keyboards/: inline.py
bot/bot/middlewares/: logging.py  rate_limit.py
bot/bot/services/: api_client.py
monitoring/: alerts.yml  prometheus.yml
src/: config.js  config.ts  main.js  style.css  types.ts  utils.js  utils.ts
src/services/: BridgeService.js  EventBus.js  EventBus.ts  RateService.js  StorageService.js  StorageService.ts  TelegramService.js
website/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.js
(+62 files in other folders)
