[package]
name = "umbra"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "set-header", "timeout"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for blockchain RPCs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Auth & crypto
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
base64 = "0.22"

# FROST threshold signatures
frost-secp256k1 = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
url = "2"
regex = "1"
futures = "0.3"
tokio-stream = "0.1"
pin-project-lite = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
